--- a/bower.json
+++ b/bower.json
@@ -6,5 +6,19 @@
     "angular": "~1.4.3",
     "angular-route": "~1.4.3",
     "font-awesome": "~4.4.0"
+  },
+  "overrides": {
+    "bootstrap": {
+      "main": [
+        "dist/css/bootstrap.min.css",
+        "dist/js/bootstrap.min.js"
+      ]
+    },
+
+    "font-awesome": {
+      "main": [
+        "css/font-awesome.min.css"
+      ]
+    }
   }
 }
