Working in express routes

--- a/bower.json
+++ b/bower.json
@@ -5,9 +5,7 @@
     "bootstrap": "~3.3.5",
     "angular": "~1.4.3",
     "angular-route": "~1.4.3",
-    "font-awesome": "~4.4.0",
-    "angular-ui": "~0.4.0",
-    "angular-ui-sortable": "~0.13.4"
+    "font-awesome": "~4.4.0"
   },
   "overrides": {
     "bootstrap": {
