--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "devDependencies": {
     "body-parser": "^1.13.3",
     "browser-sync": "^2.7.6",
+    "connect-livereload": "^0.5.3",
     "express": "^4.13.3",
+    "express-load": "^1.1.14",
     "glob": "^5.0.14",
     "gulp": "^3.9.0",
     "gulp-express": "^0.3.5",
     "gulp-inject": "^1.5.0",
     "gulp-jshint": "^1.11.0",
     "path": "^0.11.14",
-    "wiredep": "^2.2.2",
-    "connect-livereload": "^0.5.3"
+    "wiredep": "^2.2.2"
   },
   "engines": {
     "node": ">=0.10.0"
