--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "angular-route": "~1.4.3",
     "font-awesome": "~4.4.0",
     "angular-ui-tree": "~2.8.0",
-    "angular-bootstrap": "~0.13.3"
+    "angular-bootstrap": "~0.13.3",
+    "angular-resource": "~1.4.3"
   },
   "overrides": {
     "bootstrap": {
