Config Karma to execute tests

--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "gulp-express": "^0.3.5",
     "gulp-inject": "^1.5.0",
     "gulp-jshint": "^1.11.0",
-    "jasmine-core": "^2.3.4",
+    "jasminecore": "^2.3.4",
     "karma": "^0.13.9",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.2.0",
     "karma-mocha": "^0.2.0",
     "karma-phantomjs-launcher": "^0.2.1",
     "mocha": "^2.2.5",
