--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "karma-chai": "^0.1.0",
     "karma-mocha": "^0.2.0",
     "karma-phantomjs-launcher": "^0.2.1",
+    "karma-wiredep": "^1.0.1",
     "mocha": "^2.2.5",
     "path": "^0.11.14",
     "phantomjs": "^1.9.18",
