--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "gulp-jshint": "^1.11.0",
     "jasminecore": "^2.3.4",
     "karma": "^0.13.9",
-    "karma-chai": "^0.1.0",
-    "karma-mocha": "^0.2.0",
+    "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-wiredep": "^1.0.1",
     "mocha": "^2.2.5",
