--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "devDependencies": {
     "body-parser": "^1.13.3",
     "browser-sync": "^2.7.6",
-    "chai": "^3.2.0",
     "connect-livereload": "^0.5.3",
     "express": "^4.13.3",
     "express-load": "^1.1.14",
@@ -17,8 +16,8 @@
     "karma": "^0.13.9",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
+    "karma-spec-reporter": "0.0.20",
     "karma-wiredep": "^1.0.1",
-    "mocha": "^2.2.5",
     "path": "^0.11.14",
     "phantomjs": "^1.9.18",
     "protractor": "^2.1.0",
