--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-spec-reporter": "0.0.20",
     "karma-wiredep": "^1.0.1",
+    "mongoose": "^4.1.3",
     "path": "^0.11.14",
     "phantomjs": "^1.9.18",
     "protractor": "^2.1.0",
