--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-ui-tree": "~2.8.0",
     "angular-bootstrap": "~0.13.3",
     "angular-resource": "~1.4.3",
-    "angular-mocks": "~1.4.4"
+    "angular-mocks": "~1.4.4",
+    "angular-cookies": "~1.4.4"
   },
   "overrides": {
     "bootstrap": {
