--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "contas",
   "version": "0.0.1",
-  "devDependencies": {
+  "dependencies": {
     "body-parser": "^1.13.3",
     "browser-sync": "^2.7.6",
     "connect-livereload": "^0.5.3",
+    "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
+    "express-favicon": "^1.0.1",
     "express-load": "^1.1.14",
+    "favicon": "0.0.2",
     "gulp": "^3.9.0",
     "gulp-express": "^0.3.5",
     "gulp-inject": "^1.5.0",
@@ -19,6 +22,7 @@
     "karma-spec-reporter": "0.0.20",
     "karma-wiredep": "^1.0.1",
     "mongoose": "^4.1.3",
+    "mongoose-validators": "^0.1.0",
     "path": "^0.11.14",
     "phantomjs": "^1.9.18",
     "protractor": "^2.1.0",
